# NonLinearSolverLib

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: tests.yml
benchmarks/: benchmark_fixture.hpp  benchmark_solver.cpp
nonlinear/: backimplement.tpp  lsutils.hpp  nlsdetail.tpp  nlslib.hpp  nonlinearsolver.hpp
structures/: jacobian.hpp  matrix.hpp  matrix.tpp
tests/: test_fixture.hpp  test_solver.cpp
